--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,8 @@
 {
   "routes": [
-    { "src": "/admin/?", "dest": "/admin.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/admin", "dest": "/admin.html" },
+    { "src": "/admin.html", "dest": "/admin.html" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
